# photoSort2

./: CMakeLists.txt  detailscene.cpp  detailscene.h  main.cpp  photodetaileditem.cpp  photodetaileditem.h  photosortitem.cpp  photosortitem.h  photosortmainwindow.cpp  photosortmainwindow.h  photosortmodel.cpp  photosortmodel.h  photosortpreview.cpp  photosortpreview.h
